# cmake_template

./: CMakeLists.txt  CMakePresets.json
src/: main.cpp
